# template-poetry

./: Dockerfile  README.md  cookiecutter.json  local_extensions.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: analyze-codeql.yml  check-pytest.yml  do-things.yml  post-commit-jobs.yml  release.yml  stefflow.yml  test.yml  tests.yml
docs/source/: conf.py
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: release.yml  test.yml
{{ cookiecutter.project_name }}/docs/source/: conf.py  index.rst  installation.rst  testing.rst
